# myutils

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
myutils/: __init__.py  array.py  dataframe.py  numeric.py  text.py
tests/: test_array.py  test_dataframe.py  test_numeric.py  test_text.py
