[tool.poetry]
name = "myutils"
version = "0.0.1"
description = "Some useful utilities for data processing"
authors = ["Eddie Lin <eddielin0926@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
ruff = "^0.2.0"

[tool.pytest.ini_options]
addopts = "--cov=myutils --cov-report=html"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
